# CTU_effective_cpp_programming

./: .gitmodules  README.md
lab1_pimpl/include/: LookupTable.h
lab1_pimpl/scripts/: start.sh
lab1_pimpl/src/: LookupTable.cpp  LookupTableNormal.cpp
lab2_pimpl/: CMakeLists.txt  README.md
lab2_pimpl/include/: LookupTable.h  LookupTableNormal.h
lab3/: CMakeLists.txt
lab3/include/: PairInt.h  PairIntOwner.h
lab3/scripts/: README.md
lab3/src/: PairIntOwner.cpp  PaitInt.cpp
lab3_static_dynamic_storage/: CMakeLists.txt  README.md
lab3_static_dynamic_storage/include/: PairIntOwner.h
lab3_static_dynamic_storage/src/: PairIntOwner.cpp  test.cpp
lab4/: CMakeLists.txt
lab4/src/: test.cpp
lab4_value_pointer/: README.md
lab5_assignment_operators/: CMakeLists.txt  compile.sh  report.md
lab5_assignment_operators/include/: ValuePtr.h  X.h
lab5_assignment_operators/lab4_value_pointer/: CMakeLists.txt
lab5_assignment_operators/lab4_value_pointer/src/: test.cpp
lab5_assignment_operators/src/: test.cpp
lab6_copy_elision/: CMakeLists.txt  README.md
lab6_copy_elision/include/: X.h
lab6_copy_elision/src/: test.cpp
semestral_project_epc_optional/: CMakeLists.txt  README.md  compile.sh
semestral_project_epc_optional/.github/workflows/: arch.yml  ubuntu.yml  windows.yml
semestral_project_epc_optional/cmake/: config.cmake
semestral_project_epc_optional/include/: optional.h
semestral_project_epc_optional/src/: main.cpp  test1_default_constructor.cpp  test2_constructor.cpp  test3_copy.cpp  test4_copy_move.cpp  test_constructor.cpp  test_default_constructor.cpp
semestral_project_epc_optional/src/tests/: test10_general.cpp  test1_default_constructor.cpp  test2_constructor.cpp  test3_copy.cpp  test4_copy_move.cpp  test5_copy_assignment.cpp  test6_move_asignment.cpp  test7_swap.cpp  test8_swap_function.cpp  test9_emplace_reset_access.cpp
